(executable
 (name generator)
 (modules generator))

(library
 (name gen)
 (modules generated_module)
 ; TODO LTCG SHOULD NOT BE NECESSARY
 (modules_without_implementation generated_module)
 (link_time_code_gen
  (module generated_module)
  (action (echo "let test = \"foobars\"")
  )))

(executable
 (name foo)
 (modules foo)
 (libraries gen))
