(executable
 (name generator)
 (modules generator))

; (rule
;  (alias dodo)
;  (action (run ./generator.exe)))

(library
 (name gen)
 (modules generated_module)
 ; TODO LTCG SHOULD NOT BE NECESSARY
 (modules_without_implementation generated_module)
 (link_time_code_gen
  (module generated_module)
  ; (action (echo "let test = \"foobars\"")
   (action (run ./generator.exe)

  )))


(executable
 (name foo)
 (modules foo)
 (libraries gen))
