(executable
 (public_name main)
 ;(modules main my_cbi my_cbi2)
 )

 ; (executables
 ;  (public_names exe1 exe2)
 ;  (modules exe1 exe2 my_cbi3 ))


(generate_custom_build_info
 (module my_cbi)
 (max_size 66)
 (link_time_action (run ocaml %{dep:gen_version.ml})))

(generate_custom_build_info
 (module my_cbi2)
 (max_size 4)
 (link_time_action (run date +%s.%N)))

(generate_custom_build_info
 (module my_cbi3)
 (max_size 4)
 (link_time_action (echo %{target})))
