(executable
 (name foo)
 (public_name foo)
 (promote (until-clean))
 (libraries dune-build-info)
 (modules foo my_cbi)
; (modules_without_implementation my_cbi)
 (custom_build_info
  (max_size 66)
  (action (echo "toto")))
 )

(generate_custom_build_info
 (module my_cbi)
 (max_size 66)
 (link_time_action (run ocaml %{dep:gen_version.ml})))
